--- a/2 CSS/navbar.html
+++ b/2 CSS/navbar.html
@@ -18,6 +18,7 @@
 <script>
     function accion() {
         console.log('esta funcionando mi botón');
+        // aprendiendo git
 
     }
 </script>
